--- a/environment.yml
+++ b/environment.yml
@@ -1,91 +1,130 @@
 name: inpainting
 channels:
   - pytorch
+  - https://repo.anaconda.com/pkgs/main
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
+  - _openmp_mutex=5.1=1_gnu
+  - abseil-cpp=20211102.0=hd4dd3e8_0
+  - absl-py=1.3.0=py310h06a4308_0
+  - aiohttp=3.8.3=py310h5eee18b_0
+  - aiosignal=1.2.0=pyhd3eb1b0_0
+  - async-timeout=4.0.2=py310h06a4308_0
+  - attrs=22.1.0=py310h06a4308_0
   - blas=1.0=mkl
+  - blinker=1.4=py310h06a4308_0
+  - boltons=23.0.0=py310h06a4308_0
+  - brotlipy=0.7.0=py310h7f8727e_1002
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2021.1.19=h06a4308_1
-  - certifi=2020.12.5=py38h06a4308_0
-  - cudatoolkit=10.2.89=hfd86e86_1
+  - c-ares=1.19.0=h5eee18b_0
+  - ca-certificates=2023.01.10=h06a4308_0
+  - cachetools=4.2.2=pyhd3eb1b0_0
+  - certifi=2022.12.7=py310h06a4308_0
+  - cffi=1.15.1=py310h5eee18b_3
+  - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - click=8.0.4=py310h06a4308_0
+  - conda=23.3.1=py310h06a4308_0
+  - conda-content-trust=0.1.3=py310h06a4308_0
+  - conda-package-handling=2.0.2=py310h06a4308_0
+  - conda-package-streaming=0.7.0=py310h06a4308_0
+  - cryptography=38.0.4=py310h9ce1e76_0
+  - cudatoolkit=11.3.1=h2bc3f7f_2
   - ffmpeg=4.3=hf484d3e_0
-  - freetype=2.10.4=h5ab3b9f_0
-  - gmp=6.2.1=h2531618_2
-  - gnutls=3.6.5=h71b1129_1002
-  - intel-openmp=2020.2=254
-  - jpeg=9b=h024ee3a_2
+  - freetype=2.12.1=h4a9f257_0
+  - frozenlist=1.3.3=py310h5eee18b_0
+  - giflib=5.2.1=h5eee18b_3
+  - gmp=6.2.1=h295c915_3
+  - gnutls=3.6.15=he1e5248_0
+  - google-auth=2.6.0=pyhd3eb1b0_0
+  - google-auth-oauthlib=0.4.1=py_2
+  - grpc-cpp=1.48.2=h5bf31a4_0
+  - grpcio=1.48.2=py310h5bf31a4_0
+  - idna=3.4=py310h06a4308_0
+  - intel-openmp=2023.1.0=hdb19cb5_46305
+  - jpeg=9e=h5eee18b_1
+  - jsonpatch=1.32=pyhd3eb1b0_0
+  - jsonpointer=2.1=pyhd3eb1b0_0
   - lame=3.100=h7b6447c_0
-  - lcms2=2.11=h396b838_0
-  - ld_impl_linux-64=2.33.1=h53a641e_7
-  - libffi=3.3=he6710b0_2
-  - libgcc-ng=9.1.0=hdf63c60_0
-  - libiconv=1.15=h63c8f33_5
-  - libpng=1.6.37=hbc83047_0
-  - libstdcxx-ng=9.1.0=hdf63c60_0
-  - libtiff=4.1.0=h2733197_1
-  - libuv=1.40.0=h7b6447c_0
-  - lz4-c=1.9.3=h2531618_0
-  - mkl=2020.2=256
-  - mkl-service=2.3.0=py38he904b0f_0
-  - mkl_fft=1.3.0=py38h54f3939_0
-  - mkl_random=1.1.1=py38h0573a6f_0
-  - ncurses=6.2=he6710b0_1
-  - nettle=3.4.1=hbb512f6_0
-  - ninja=1.10.2=py38hff7bd54_0
-  - numpy=1.19.2=py38h54aff64_0
-  - numpy-base=1.19.2=py38hfa32c7d_0
-  - olefile=0.46=py_0
-  - openh264=2.1.0=hd408876_0
-  - openssl=1.1.1k=h27cfd23_0
-  - pillow=8.1.2=py38he98fc37_0
-  - pip=21.0.1=py38h06a4308_0
-  - python=3.8.8=hdb3f193_4
-  - pytorch=1.8.1=py3.8_cuda10.2_cudnn7.6.5_0
-  - readline=8.1=h27cfd23_0
-  - setuptools=52.0.0=py38h06a4308_0
-  - six=1.15.0=py38h06a4308_0
-  - sqlite=3.35.3=hdfb4753_0
-  - tk=8.6.10=hbc83047_0
-  - torchaudio=0.8.1=py38
-  - torchvision=0.9.1=py38_cu102
-  - typing_extensions=3.7.4.3=pyha847dfd_0
-  - wheel=0.36.2=pyhd3eb1b0_0
-  - xz=5.2.5=h7b6447c_0
-  - zlib=1.2.11=h7b6447c_3
-  - zstd=1.4.9=haebb681_0
+  - lcms2=2.12=h3be6417_0
+  - ld_impl_linux-64=2.38=h1181459_1
+  - lerc=3.0=h295c915_0
+  - libdeflate=1.17=h5eee18b_0
+  - libffi=3.4.2=h6a678d5_6
+  - libgcc-ng=11.2.0=h1234567_1
+  - libgomp=11.2.0=h1234567_1
+  - libiconv=1.16=h7f8727e_2
+  - libidn2=2.3.2=h7f8727e_0
+  - libpng=1.6.39=h5eee18b_0
+  - libprotobuf=3.20.3=he621ea3_0
+  - libstdcxx-ng=11.2.0=h1234567_1
+  - libtasn1=4.19.0=h5eee18b_0
+  - libtiff=4.5.0=h6a678d5_2
+  - libunistring=0.9.10=h27cfd23_0
+  - libuuid=1.41.5=h5eee18b_0
+  - libwebp=1.2.4=h11a3e52_1
+  - libwebp-base=1.2.4=h5eee18b_1
+  - lz4-c=1.9.4=h6a678d5_0
+  - markdown=3.4.1=py310h06a4308_0
+  - markupsafe=2.1.1=py310h7f8727e_0
+  - mkl=2023.1.0=h6d00ec8_46342
+  - mkl-service=2.4.0=py310h5eee18b_1
+  - mkl_fft=1.3.6=py310h1128e8f_1
+  - mkl_random=1.2.2=py310h1128e8f_1
+  - multidict=6.0.2=py310h5eee18b_0
+  - ncurses=6.4=h6a678d5_0
+  - nettle=3.7.3=hbbd107a_1
+  - numpy=1.24.3=py310h5f9d8c6_1
+  - numpy-base=1.24.3=py310hb5e798b_1
+  - oauthlib=3.2.2=py310h06a4308_0
+  - openh264=2.1.1=h4ff587b_0
+  - openssl=1.1.1t=h7f8727e_0
+  - packaging=23.0=py310h06a4308_0
+  - pillow=9.4.0=py310h6a678d5_0
+  - pip=22.3.1=py310h06a4308_0
+  - pluggy=1.0.0=py310h06a4308_1
+  - protobuf=3.20.3=py310h6a678d5_0
+  - pyasn1=0.4.8=pyhd3eb1b0_0
+  - pyasn1-modules=0.2.8=py_0
+  - pycosat=0.6.4=py310h5eee18b_0
+  - pycparser=2.21=pyhd3eb1b0_0
+  - pyjwt=2.4.0=py310h06a4308_0
+  - pyopenssl=22.0.0=pyhd3eb1b0_0
+  - pysocks=1.7.1=py310h06a4308_0
+  - python=3.10.9=h7a1cb2a_0
+  - pytorch=1.12.1=py3.10_cuda11.3_cudnn8.3.2_0
+  - pytorch-mutex=1.0=cuda
+  - re2=2022.04.01=h295c915_0
+  - readline=8.2=h5eee18b_0
+  - requests=2.28.1=py310h06a4308_0
+  - requests-oauthlib=1.3.0=py_0
+  - rsa=4.7.2=pyhd3eb1b0_1
+  - ruamel.yaml=0.17.21=py310h5eee18b_0
+  - ruamel.yaml.clib=0.2.6=py310h5eee18b_1
+  - setuptools=65.6.3=py310h06a4308_0
+  - six=1.16.0=pyhd3eb1b0_1
+  - sqlite=3.40.1=h5082296_0
+  - tbb=2021.8.0=hdb19cb5_0
+  - tensorboard=2.6.0=py_0
+  - tensorboard-plugin-wit=1.8.1=py310h06a4308_0
+  - tk=8.6.12=h1ccaba5_0
+  - toolz=0.12.0=py310h06a4308_0
+  - torchaudio=0.12.1=py310_cu113
+  - torchvision=0.13.1=py310_cu113
+  - tqdm=4.64.1=py310h06a4308_0
+  - typing_extensions=4.5.0=py310h06a4308_0
+  - tzdata=2022g=h04d1e81_0
+  - urllib3=1.26.14=py310h06a4308_0
+  - werkzeug=2.2.3=py310h06a4308_0
+  - wheel=0.37.1=pyhd3eb1b0_0
+  - xz=5.2.10=h5eee18b_1
+  - yarl=1.8.1=py310h5eee18b_0
+  - zlib=1.2.13=h5eee18b_0
+  - zstandard=0.18.0=py310h5eee18b_0
+  - zstd=1.5.5=hc292b87_0
   - pip:
-    - absl-py==0.12.0
-    - attrdict==2.0.1
-    - cachetools==4.2.1
-    - chardet==4.0.0
-    - cycler==0.10.0
-    - decorator==5.0.3
-    - google-auth==1.28.0
-    - google-auth-oauthlib==0.4.4
-    - grpcio==1.36.1
-    - idna==2.10
-    - imageio==2.9.0
-    - kiwisolver==1.3.1
-    - markdown==3.3.4
-    - matplotlib==3.4.1
-    - networkx==2.5
-    - oauthlib==3.1.0
-    - opencv-python==4.5.1.48
-    - protobuf==3.15.6
-    - pyasn1==0.4.8
-    - pyasn1-modules==0.2.8
-    - pyparsing==2.4.7
-    - python-dateutil==2.8.1
-    - pywavelets==1.1.1
-    - requests==2.25.1
-    - requests-oauthlib==1.3.0
-    - rsa==4.7.2
-    - scikit-image==0.18.1
-    - scipy==1.6.2
-    - tensorboard==2.4.1
-    - tensorboard-plugin-wit==1.8.0
-    - tifffile==2021.3.31
-    - tqdm==4.59.0
-    - urllib3==1.26.4
-    - werkzeug==1.0.1
+      - kaggle==1.5.13
+      - python-dateutil==2.8.2
+      - python-slugify==8.0.1
+      - scipy==1.10.1
+      - text-unidecode==1.3
